--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -1,38 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="rock-paper-scissor.css">
-      <title>Rock Paper Scisssor</title>
-</head>
-<body>
-      <p>Rock Paper Scissor</p>
-      <button onclick="
-        playerChoice('rock');
-      "><img class="images"src="/images/rock.jpeg"></button>
-      <button onclick="
-      playerChoice('paper');
-      "><img class="images"src="/images/paper.jpeg"></button>
-      <button onclick="
-      playerChoice('scissor');
-      
-      "><img class="images"src="/images/scissor.jpeg"></button>
-      <p class="js-result"></p>
-      <div class="moves-result">
-            <div class="js-playermoves js-moves" id="jsplayermove"></div>
-            <div class="js-computermoves js-moves" id="jscomputermove"></div>
-      </div>
-      <p class="js-score"></p>
-      <button onclick="
-            score.wins=0;
-            score.loses=0;
-            score.ties=0;
-            localStorage.removeItem('score');
-            updatedScore();
-      ">Reset Score</button>
-      <script src="rock-paper-scissor.js">
+<html>
 
-      </script>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="styles.css">
+    <title>Rock Paper Scissors</title>
+    <link rel="shortcut icon" href="scissor1.png">
+</head>
+
+<body>
+    <header>
+        <h1>Rock paper Scissors</h1>
+    </header>
+    <br><br>
+    <div class="score-board">
+        <div id="user-label" class="badge">player</div>
+        <div id="computer-label" class="badge">computer</div>
+        <span id="user-score">0</span> : <span id="computer-score">0</span>
+    </div><br>
+    <div class="result">
+        <p>Hi! Let's compete with computer.</p><br>
+    </div>
+
+    <div class="choices">
+
+        <div class="choice" id="r">
+            <img src="rock.png"  alt="" height="80" width="80">
+        </div>
+        <div class="choice" id="p">
+            <img src="paper.png" alt="" height="80" width="80">
+        </div>
+        <div class="choice" id="s">
+            <img src="scissor.png" alt="" height="80" width="80">
+        </div>
+    </div><br>
+
+    <p id="action-message">Make Your Choice.</p><br><br><br><br><br><br><br>
+    <p class="scroll">⏬</p>
+    <br><br><br><br><br>
+
+    <div class="rules">
+        <h1>How To Play</h1>
+        <li>If you choose Rock, you will win against Scissors but lose against Paper.</li>
+        <li>If you choose Scissors, you will win against Paper but lose against Rock.</li>
+        <li>If you choose Paper, you will win against Rock but lose against Scissors.</li><br>
+    </div><br>
+
+    <div class="hint">
+        <h1>Fun Facts of Rock Paper Scissor game </h1>
+        <li>The game originated in China during the Han Dynasty, which lasted from 206 BC to 220 AD. 
+            The earliest versions of the game used a frog, snake, and slug.</li>
+        <li>Statistics say that people usually choose Scissors in the first round and Rock in the second.</li><br>
+    </div><br>
+    
+    <div class="hint">
+        <h1>Benifits of playing Rock-Paper-Scissors</h1>
+        <p>1. Helps in Decision Making<br>
+            2. Reduces Anxiety and Stress<br>
+            3. Increases Social Interaction<br>
+        </p><br>
+    </div>
+    <br><br><br><br>
+    <script src="script.js" charset="utf-8"></script>
 </body>
+
 </html>
