--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -61,7 +61,7 @@
         </p><br>
     </div>
     <br><br><br><br>
-    <script src="script.js" charset="utf-8"></script>
+    <script src="rock-paper-scissor.js" charset="utf-8"></script>
 </body>
 
 </html>
