--- a/rock-paper-scissor.html
+++ b/rock-paper-scissor.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="rock-paper-scissor.css">
     <title>Rock Paper Scissors</title>
     <link rel="shortcut icon" href="scissor1.png">
 </head>
