--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="rock-paper-scissor.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Rock Paper Scissors</title>
     <link rel="shortcut icon" href="scissor1.png">
 </head>
@@ -61,7 +61,7 @@
         </p><br>
     </div>
     <br><br><br><br>
-    <script src="rock-paper-scissor.js" charset="utf-8"></script>
+    <script src="script.js" charset="utf-8"></script>
 </body>
 
 </html>
